...
                        onPress={() => console.log("Hook: Help - Privacy Policy")}
                    />
                </View>

                {/* 版本号 */}
                <View className="items-center mt-10">
                    <Text className="text-black dark:text-white font-black text-2xl italic mb-1">FITBODY</Text>
                    <Text className="text-gray-500 dark:text-gray-600 text-sm">Version 1.0.0 (Build 20240101)</Text>
                </View>
            </ScrollView>
        </SafeAreaView>
    );
}
