...
    { id: 'm_martial_arts', name: '武术', level: '高级', icon: 'figure.martial.arts', isVisible: false },
    { id: 'm_mind_body', name: '身心合一', level: '初级', icon: 'figure.mind.and.body', isVisible: false },
    { id: 'm_mixed_cardio', name: '混合有氧', level: '中级', icon: 'figure.mixed.cardio', isVisible: false },
    { id: 'm_pilates', name: '普拉提', level: '中级', icon: 'figure.pilates', isVisible: false },
    { id: 'm_play', name: '运动游戏', level: '初级', icon: 'figure.play', isVisible: false },
    { id: 'm_rolling', name: '泡沫轴放松', level: '初级', icon: 'figure.rolling', isVisible: false },
    { id: 'm_run', name: '跑步', level: '有氧', icon: 'figure.run', isVisible: true },
    { id: 'm_run_treadmill', name: '跑步机', level: '有氧', icon: 'figure.run.treadmill', isVisible: false },
    { id: 'm_stair_stepper', name: '踏步机', level: '有氧', icon: 'figure.stair.stepper', isVisible: false },
    { id: 'm_stairs', name: '爬楼梯', level: '有氧', icon: 'figure.stairs', isVisible: false },
    { id: 'm_stand_dress', name: '站姿调整', level: '初级', icon: 'figure.stand.dress', isVisible: false },
    { id: 'm_stand', name: '站立', level: '初级', icon: 'figure.stand', isVisible: false },
    { id: 'm_step_training', name: '踏板操', level: '中级', icon: 'figure.step.training', isVisible: false },
...
