appId: com.anonymous.fitness-demo
---
- launchApp
- assertVisible: "FITBODY"
- tapOn: "立即注册"
- assertVisible: "创建新账号"
- tapOn: "设置昵称"
- inputText: "MaestroTester"
- tapOn: "手机号码"
- inputText: "13800138000"
- tapOn: "验证码"
- inputText: "1234"
- tapOn: "立即注册"
- assertVisible: "你的健身基础是？"
- tapOn: "高手 (Expert)"
- tapOn: "完成设置"
- assertVisible: "设置成功"
- tapOn: "开始健身"
- assertVisible: "moves-list"
